tests/ui/specialization/min_specialization/uncontstrained_lifetime.stderr
error: specialization impl does not specialize any associated items
  --> $DIR/uncontstrained_lifetime.rs:12:1
   |
LL | impl Dance for bool {}
   | ^^^^^^^^^^^^^^^^^^^
   |
note: impl is a specialization of this impl
  --> $DIR/uncontstrained_lifetime.rs:10:1
   |
LL | impl<'a, T> Dance for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^

error[E0207]: the type parameter `Unconstrained` is not constrained by the impl trait, self type, or predicates
  --> $DIR/uncontstrained_lifetime.rs:19:10
   |
LL | impl<'a, Unconstrained> X for [(); 0] {}
   |          ^^^^^^^^^^^^^ unconstrained type parameter

error: specialization impl does not specialize any associated items
  --> $DIR/uncontstrained_lifetime.rs:19:1
   |
LL | impl<'a, Unconstrained> X for [(); 0] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: impl is a specialization of this impl
  --> $DIR/uncontstrained_lifetime.rs:17:1
   |
LL | impl<'a, const N: usize> X for [(); N] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0207`.
